# PVRP-DataDriven

./: README.md  debug_eval.py  debug_partitions.py  debug_partitions_p03.py  diagnostico_p01_p03.py  inspeccion.py  inspeccion2.py  pyproject.toml  requirements.txt  verificar_grandes.py  verificar_p02.py
_memoria_extracted/: README.md  anexos.tex  bibliografia.bib  conclusiones.tex  definicion_del_problema.tex  glosario.tex  introduccion.tex  main.tex  marco_conceptual.tex  propuesta_de_solucion.tex  validacion_de_la_solucion.tex
data/: readme.txt
notebooks/: 02_test_environment.ipynb
results/: ablacion_p03_2opt.txt  ablacion_p03_intraday.txt  ablacion_p04_2opt.txt  ablacion_p04_intraday.txt  ablacion_p06_2opt.txt  ablacion_p06_intraday.txt  ablacion_p07_2opt.txt  ablacion_p07_intraday.txt  ablacion_p09_2opt.txt  ablacion_p09_intraday.txt  barrido_01000.txt  barrido_04000.txt  barrido_08000.txt  barrido_16000.txt  barrido_a_01000.txt  barrido_a_08000.txt  barrido_p07_04000.txt  calib_p03_8000.txt  calib_p07_1000.txt  calib_p08.txt  comparacion_tiempo.txt  comparacion_tiempo_B.txt  final_8000_grupo1.txt  final_8000_grupo2.txt  final_8000_grupo3.txt  hibrido_00100_greedy.txt  hibrido_00100_rl.txt  hibrido_00500_greedy.txt  hibrido_00500_rl.txt  hibrido_01000_rl.txt  multiseed_p05.txt  multiseed_p08.txt
scripts/: baselines_all.py  comandos.ps1  comparacion_tiempo.py  correr.ps1  ejemplo_mascara.py  evaluate_agent.py  evaluate_cross.py  experimento_calibracion_p04.py  experimento_lambda_barrido.py  experimento_lambda_cero.py  experimento_lambda_p04.py  multi_seed.py  (+8 more)
(+45 files in other folders)
